Fix GSAP scroll bug on mobile

--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -55,6 +55,7 @@
 
 .scene--content {
 	text-align: center;
+	position: relative !important;
 }
 
 .scene__inner {
